# CMakeTesting

./: CMakeLists.txt  a.out  lib.hpp  main.cpp  my_first_test.cpp
